@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2026-02-19 21:12:02+00:00 - build 6645
+
+1. More robust palette reading.
+
+--------------------------------------------------------------------------------
 drkns 2026-02-10 02:33:01+00:00 - build 6644
 
 1. Clarify synchronisation logic.
